mail/templates/default/app.css
/* ... */
.mail-compose_composeToolbarr > span {
	padding: 10px;
	white-space: nowrap;
}
.mail-compose_composeToolbar > span.priority {
	border-right: none;
}
.compose_egw_icons {
	height: 24px;
	width: 24px;
	vertical-align: middle;
}
div.mail-compose_fileselector {
	width:auto;
	margin-top: 3px;
}
.mail-compose_fileselector span.et2_file_span {
	background-repeat: no-repeat;
	background-image: url(../default/images/attach.svg);
	background-size: inherit;
	background-position: left;
}
.mail-compose_fileselector div.progress {
	display: none;
}
#mail-compose_button\[send\] {
	text-align: left;
	font-weight: bold;
	padding-left: 30px;
	width: 80px;
	background-image: url(../default/images/mail_send.svg) !important;
	background-position: left;
	background-repeat: no-repeat;
}
.mailDisplay{
	position: relative;
	background-color: white;
	width: 100%;
	height: 100%;
}

#mail-index_mail-index-preview {
    overflow: hidden;
    position: relative;
    background-color: white;
	width: calc(100% - 1em);
	margin-left: 1ex;
}

#mail-index_mailSplitter[vertical] #mail-index_mail-index-preview {
    margin-left: 0;
    margin-top: 1ex;
}

.previewWrapper {
    height: 100%
}

.previewWrapper > * {
	margin-bottom: 0.5em;
}

.previewWrapper .et2_details.et2_details_expanded .et2_details_wrapper {
	display: block;
	position: absolute;
	top: 4em;
	box-shadow: 1px 1px 2px 1px silver;
	width: calc(100% - 6em);
	padding: 1em;
	background: white;
	max-height: 12em;
	overflow-y: auto;
}

#mail-index_mailPreview .th {display: none}

#mail-index_mailPreview > div, #mail-index_mailPreview > * {
    padding-left: 8px !important;
}
#mail-index_mailPreview_subject, #mail-display_mail_displaysubject {
	margin-bottom: 0.5em;
	font-size: 1.2em;
}
et2-details.details::part(summary),
et2-details.attachments::part(summary){
	padding-left: 1em;
}
et2-details.details {width: 100%}

.mailDisplay et2-details::part(base),
.previewWrapper et2-details::part(base){
	border: none;
}
.mailPreviewHeaders et2-details::part(header) {padding: 0;}
#mail-index_mailPreview .et2_email > span {
    display: inline;
}
.maildisplayAllAdresses {
	max-height: 245px !important;
	overflow:scroll;
	overflow-x:hidden;
}
#mail-compose_composeToolbar {
	padding: 0px !important;
	border: none;
}
#mail-compose_composeToolbar > button {
	padding: .2em .4em;
}
#mail-compose_composeToolbar > img {
	width: 16px;
	padding: 0px;
	height: 16px !important;
}
#mail-compose_composeToolbar > button > span > img {
	width: 16px;
	padding: 0px;
	height: 16px !important;
}
#mail-compose_composeToolbar > button {
	padding: .2em .4em;
}
#mail-compose_to div.ms-sel-ctn, #mail-compose_cc .ms-sel-ctn, #mail-compose_bcc .ms-sel-ctn {
	max-height: 75px;
}
#mail-display_toolbar > button > span {
	padding: .2em .4em;
}
#mail-display_toolbar > button > span > img {
	width: 16px;
	padding: 0px;
	height: 16px !important;
}
#mail-display_toolbar .et2_button_icon, .previewAttachmentArea .et2_button_icon, #mail-display_mail_displayattachments .et2_button_icon {
	width: 16px;
	height: 16px;
}
.mailPreviewIcons {
	position: absolute;
	right: 0;
	top: 0;
}
#mail-index_toolbar {
	padding: 0px;
	height: 35px;
}
#mail-index_toolbar > button > span {
	padding: .2em .4em;
}
#mail-index_toolbar > button > span > img {
	width: 16px;
	padding: 0px;
	height: 16px !important;
}
#mail-index_toolbar > #toolbar-actionlist {
	width:auto;
}
#mail-index_previewAttachmentArea {
	background-color:#f0f0f0;
	max-height: 3.6em;
	max-width: 50%;
	overflow:scroll;
	overflow-x:hidden;
	border: 1px solid grey;
	opacity: 1;
	-moz-opacity:1;
	filter: Alpha(opacity=100);
	display: inline-block !important;
	width:100%;
	vertical-align: text-top;
}
#mail-index_previewAttachmentArea.noContent {
	border:0px !important;
	display: none !important;
}

#mail-display {
    padding: 5px;
}

.mailDisplayContainer {
	height: 100%;
	padding-top: 1em;
	border-top: 1px solid silver;
	margin-top: 1em;
}
.mailDisplayBody {
	height:100%;
	width:100%;
	background-color:white;
	padding:0px;
	margin:0px;
}
.mailDisplayAttachments {
	height: 114px;
	position: fixed;
	bottom: 8px;
	border-top: 1px solid grey;
	opacity: 1;
	-moz-opacity:1;
	filter: Alpha(opacity=100);
	overflow-y: auto;
}
#mail-display_mailDisplayBodySrc {
	height:100%;
}

.mailDisplayHeaders {
    overflow: hidden;
    right: 8px;
    font-size: 14px;
}

.mailDisplayHeaderSection {
    position: absolute;
    top: 12px;

}

div.mailDisplayHeaders > span:first-child, div.mailPreviewHeaders > span:first-child {
    width: 7em;
    display: inline-block;
}

div.mailDisplayHeaders et2-select-email, div.mailPreviewHeaders et2-select-email {
    display: inline-block;
}

#mail-display_toolbar {
    display: inline-flex;
}

div.mailComposeHeaders > span:first-child {
    width: 8em;
}

div.mailDisplayHeaders div.mail_extraEmails {
    display: inline-block;
    max-height: 1.3em;
    max-width: 50%;
    overflow: hidden;
    text-overflow: ellipsis;
    vertical-align: top;
}

div.mailDisplayHeaders div.mail_extraEmails.visible {
    position: fixed;
    left: 7em;
    display: block;
    max-height: 8em;
    min-width: 30em;
    z-index: 999;
    overflow-y: auto;
    background-color: white;
    box-shadow: 5px 5px 5px #aaa;
    border: 1px solid gray;
}

.mailComposeBody {
    white-space: normal !important;
}

#mail-compose_mail_plaintext {
    white-space: pre-wrap !important;
}

.mailPreviewHeaders {
    font-size: 0.875rem;
	position: relative;
}

.mailPreviewHeaders :first-child, .mailDisplayHeaders :first-child {
   color: #7a7a7a;
}
.mailPreviewHeaders et2-lavatar {
	flex: 0 0 auto;
}
div.mailPreviewHeaders div.mail_extraEmails {
    display: inline-block;
    max-height: 1.3em;
    max-width: 50%;
    overflow: hidden;
    text-overflow: ellipsis;
    vertical-align: top;
}

#mail-index #mail-index_mailPreview #mail-index_mailPreviewHeadersSubject {
  width: 90%;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}
/* ... */

